[package]
name = "miru"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Angel Dollface"]
description= "An extremely light, powerful, pragmatic, and extremely fast web framework for Rust."
homepage = "https://github.com/angeldollface/miru"
repository = "https://github.com/angeldollface/miru"
documentation = "https://docs.rs/miru/0.1.0"
readme = "README.markdown"
keywords = [
    "miru", 
    "http", 
    "web", 
    "framework", 
    "async"
]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
    "web-programming::websocket"
]
exclude = [
    "/.github"
]

[dependencies]
serde_json = "1.0.121"
serde = { version = "1.0.204", features = ["derive"] }
